# playlist-librarian

./: .gitignore  main.py  pyproject.toml
src/: config.py  server.py  spotify_client.py  utils.py
src/spotify/: server.py
